# xsens_public_sdk

./: .gitignore  CMakeLists.txt  README.md  package.xml
examples/: CMakeLists.txt
xspublic/: CMakeLists.txt
xspublic/xscommon/: CMakeLists.txt  consolelogger.cpp  enumexpandersbase.cpp  fwupdate.c  journaller.cpp  journaller.h  threading.cpp
xspublic/xscontroller/: CMakeLists.txt  broadcastdevice.cpp  dataparser.cpp  datapoller.cpp  enumerateusbdevices.cpp  enumexpanders.cpp  scanner.cpp  xsconnectivitystate.h
xspublic/xstypes/: CMakeLists.txt  xsarray.h  xsbytearray.h  xseuler.c  xseuler.h  xsfilterprofile.h  xsfilterprofilearray.h  xsmatrix.c  xsoutputconfigurationarray.h  xsquaternion.c  xsquaternion.h  xsversion.c
